--- a/ng.html
+++ b/ng.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html lang="km">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eco Donation & Events Cambodia</title>
-  
-  <link href="https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eco Donation & Events Cambodia</title>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&display=swap"
       rel="stylesheet"
@@ -24,11 +16,6 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
 
     <style>
@@ -62,7 +49,7 @@
       }
 
       .checklist li::before {
-        content: "✔ ";
+        content: "✔️ ";
         color: green;
       }
 
@@ -95,10 +82,11 @@
       }
     </style>
   </head>
+
   <body>
-    <header>
+        <header>
       <nav
-        class="navbar bg-nav fixed-top navbar-expand-lg"
+        class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
         style="height: 70px"
       >
         <div class="container-fluid">
@@ -139,9 +127,9 @@
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
                 <!-- Search Button -->
-                <form class="d-flex" role="search">
+                <form class="d-flex mb-2" role="search">
                   <input
-                    class="form-control search-1"
+                    class="form-control search-1 d-md-none"
                     type="search"
                     placeholder="Search"
                     aria-label="Search"
@@ -149,7 +137,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link fs-5 nav-hover"
+                    class="nav-link active fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -158,7 +146,7 @@
                 <li class="nav-item dropdown fs-5">
                   <a
                     class="nav-link nav-hover no-caret dropdown-toggle"
-                    href="#"
+                    href="index.html"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
@@ -175,10 +163,10 @@
                   </ul>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover active" href="ng.html">សកម្មភាពសង្គម</a>
+                  <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="#">ផលិតផលកែច្នៃ</a>
+                  <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
                 </li>
                 <li class="nav-item fs-5">
                   <a
@@ -378,7 +366,6 @@
                     <span class="ms-2">Dark</span>
                   </a>
                 </li>
-                
               </ul>
             </div>
           </div>
@@ -399,11 +386,12 @@
               <div class="hero-content">
                 <h1>Zero-Waste</h1>
                 <p>ប្រើប្រាស់ឡើងវិញ, កាត់បន្ថយ, និងជួយសហគមន៍</p>
-                <a href="event.html" class="btn btn-success"
-                  >ចូលរួមព្រឹត្តិការណ៍ <i class="fa-solid fa-arrow-right"></i
+                <a href="donate.html" class="btn btn-success"
+                  >កន្លែងទទួលបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i
                 ></a>
-                <a href="donate.html" class="btn btn-light"
-                  >ចូលរួមបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i
+                <a href="used.html" class="btn btn-light"
+                  >បរិច្ចាគរបស់ដែលអ្នកប្រើប្រាស់រួច
+                  <i class="fa-solid fa-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -418,11 +406,12 @@
               <div class="hero-content">
                 <h1>ចូលរួមក្នុងការកាត់បន្ថយកាកសំណល់</h1>
                 <p>បរិច្ចាគ, កែច្នៃ និងធ្វើឱ្យកម្ពុជាស្រស់ស្អាត</p>
-                <a href="event.html" class="btn btn-success"
-                  >ចូលរួមព្រឹត្តិការណ៍ <i class="fa-solid fa-arrow-right"></i
+                <a href="donate.html" class="btn btn-success"
+                  >កន្លែងទទួលបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i
                 ></a>
-                <a href="donate.html" class="btn btn-light"
-                  >ចូលរួមបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i
+                <a href="used.html" class="btn btn-light"
+                  >បរិច្ចាគរបស់ដែលអ្នកប្រើប្រាស់រួច
+                  <i class="fa-solid fa-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -437,11 +426,12 @@
               <div class="hero-content">
                 <h1>កែច្នៃប្លាស្ទិក និងវត្ថុប្រើប្រាស់ឡើងវិញ</h1>
                 <p>អប់រំ និងចូលរួមក្នុងគម្រោងការពារបរិស្ថាន</p>
-                <a href="event.html" class="btn btn-success"
-                  >ចូលរួមព្រឹត្តិការណ៍ <i class="fa-solid fa-arrow-right"></i
+                <a href="donate.html" class="btn btn-success"
+                  >កន្លែងទទួលបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i
                 ></a>
-                <a href="donate.html" class="btn btn-light"
-                  >ចូលរួមបរិច្ចាគ <i class="fa-solid fa-arrow-right"></i
+                <a href="used.html" class="btn btn-light"
+                  >បរិច្ចាគរបស់ដែលអ្នកប្រើប្រាស់រួច
+                  <i class="fa-solid fa-arrow-right"></i
                 ></a>
               </div>
             </div>
@@ -466,29 +456,60 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <!-- How It Works Section -->
+      <section>
+        <div class="container text-center my-5">
+          <h2 class="mb-4">របៀបដំណើរការ</h2>
+          <div class="row">
+            <div class="col-4">
+              <i class="fa-solid fa-box-open fa-2x text-success mb-2"></i>
+              <h5>1. ប្រមូល</h5>
+              <p>
+                ជ្រើសរើសវត្ថុដែលអ្នកមិនចាំបាច់ប្រើទៀត ប៉ុន្តែវានៅតែមានប្រយោជន៍
+              </p>
+            </div>
+            <div class="col-4">
+              <i
+                class="fa-solid fa-hand-holding-heart fa-2x text-success mb-2"
+              ></i>
+              <h5>2. បរិច្ចាគ</h5>
+              <p>នាំវត្ថុទាំងនោះទៅកន្លែងដែលត្រូវការ</p>
+            </div>
+            <div class="col-4">
+              <i class="fa-solid fa-smile fa-2x text-success mb-2"></i>
+              <h5>3. បង្កើតឥទ្ធិពល</h5>
+              <p>ការបរិច្ចាគរបស់អ្នកអាចជួយអ្នកដទៃ និងកាត់បន្ថយកាកសំណល់</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
-      <!-- Events Section -->
-      <section id="events" class="container my-5">
-        <h2>ព្រឹត្តិការណ៍កំពុងមកដល់</h2>
+      <!-- Donations place Section -->
+      <section id="donations" class="container my-5">
+        <h2>
+          <i class="fas fa-map-marker-alt me-2 mb-3"></i>កន្លែងទទួលបរិច្ចាគ
+          និងកែច្នៃ
+        </h2>
         <div class="row g-4">
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="assets/Kropum/img/Event4.jpg"
-                class="card-img-top"
-                alt="event1"
+                src="https://i.pinimg.com/736x/29/2a/f4/292af4d58e89e7ce1f3dc0f0b8368e4f.jpg"
+                class="card-img"
+                alt="Pizza 4P’s"
+                style="height: 250px; object-fit: cover"
               />
               <div class="card-body">
-                <h5 class="card-title fw-bold">
+                <h3 class="card-title">
                   <a
-                    href="event1.html"
+                    href="pizza4ps.html"
                     class="text-decoration-none text-success"
-                    >Forest EcoPreneurs</a
+                    >Pizza 4P’s</a
                   >
-                </h5>
-                <p class="card-text text-muted">
-                  <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
-                  ធ្នូរ​ ២០២៥​ | ភ្នំពេញ
+                </h3>
+                <p class="card-text">
+                  Pizza 4P’s ចូលរួមក្នុងគម្រោង
+                  ដែលកែច្នៃកាកសំណល់ទៅជារបស់ប្រើប្រាស់...
                 </p>
               </div>
             </div>
@@ -496,147 +517,120 @@
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="assets/Kropum/img/Event6.jpg"
-                class="card-img-top"
-                alt="event2"
+                src="assets/Kropum/img/Beco---.png"
+                class="card-img"
+                alt="Be Eco"
+                style="height: 250px; object-fit: cover"
               />
               <div class="card-body">
-                <h5 class="card-title fw-bold">
+                <h3 class="card-title">
                   <a
-                    href="event2.html"
+                    href="be_eco.html"
                     class="text-decoration-none text-success"
-                    >Workshop Art,Culture</a
+                    >Be Eco</a
                   >
-                </h5>
-                <p class="card-text text-muted">
-                  <i class="fa-solid fa-calendar-days text-success"></i> ២២​
-                  ធ្នូរ​ ២០២៥​ | ភ្នំពេញ
+                </h3>
+                <p class="card-text">
+                  Be Eco ចូលរួមក្នុងគម្រោង
+                  ដែលកែច្នៃកាកសំណល់ទៅជារបស់ប្រើប្រាស់...
                 </p>
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-4">
-            <div class="card">
-              <img
-                src="assets/Kropum/img/event7.jpg"
-                class="card-img-top"
-                alt="event3"
-              />
-              <div class="card-body">
-                <h5 class="card-title fw-bold">
-                  <a
-                    href="event3.html"
-                    class="text-decoration-none text-success"
-                    >Plastic Waste</a
-                  >
-                </h5>
-                <p class="card-text text-muted">
-                  <i class="fa-solid fa-calendar-days text-success"></i> ២៥
-                  ធ្នូរ​ ២០២៥​ | Japan
+          <div class="col-md-4">
+            <div class="checklist">
+              <h3 class="card-title">អ្វីដែលអ្នកអាចបរិច្ចាគ</h3>
+              <ul>
+                <li>ប្លាស្ទិកស្អាត (ដប, កញ្ចប់)</li>
+                <li>សំលៀកបំពាក់ដែលនៅស្ថានភាពល្អ</li>
+                <li>របស់ប្រើប្រាស់ក្នុងផ្ទះ</li>
+                <li>សម្ភារៈអេឡិចត្រូនិចចាស់.....</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Donate Section -->
+      <section id="events" class="container my-5">
+        <div class="container my-5">
+          <h2 class="mb-4">ចែករំលែករបស់ដែលអ្នកប្រើប្រាស់រួច</h2>
+          <div class="row text-center">
+            <div class="col-4">
+              <div class="card p-3 shadow-sm">
+                <i
+                  class="fa-solid fa-tshirt fa-2x text-success mb-3"
+                  style="margin-left: 165px"
+                ></i>
+                <h5 class="card-title">សម្លៀកបំពាក់</h5>
+                <p class="card-text">
+                  បរិច្ចាគសម្លៀកបំពាក់ដែលអ្នកបានប្រើប្រាស់រួច
+                  ដល់មនុស្សដែលកំពុងត្រូវការ
+                </p>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card p-3 shadow-sm">
+                <i
+                  class="fa-solid fa-couch fa-2x text-success mb-3"
+                  style="margin-left: 165px"
+                ></i>
+                <h5 class="card-title">គ្រឿងសង្ហារិម</h5>
+                <p class="card-text">
+                  ផ្តល់ជីវិតថ្មីដល់គ្រឿងសង្ហារឹមចាស់របស់អ្នក
+                  ដោយបរិច្ចាគវាទៅកាន់កន្លែងដែលត្រូវការ
+                </p>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card p-3 shadow-sm">
+                <i
+                  class="fa-solid fa-laptop fa-2x text-success mb-3"
+                  style="margin-left: 165px"
+                ></i>
+                <h5 class="card-title">ឧបករណ៍អេឡិចត្រូនិច</h5>
+                <p class="card-text">
+                  កែច្នៃ និងប្រើឡើងវិញឧបករណ៍អេឡិចត្រូនិក ជំនួសឱ្យការបោះចោល.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-
-
-
-  <!-- Donations place Section -->
-  <section id="donations" class="container my-5">
-    <h2><i class="fas fa-map-marker-alt me-2 mb-3"></i>កន្លែងទទួលបរិច្ចាគ និងកែច្នៃ</h2>
-    <div class="row g-4">
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <div class="card">
-          <img src="https://i.pinimg.com/736x/29/2a/f4/292af4d58e89e7ce1f3dc0f0b8368e4f.jpg" class="card-img"
-            alt="Pizza 4P’s" style="height:250px; object-fit:cover;">
-          <div class="card-body">
-            <h3 class="card-title"><a href="pizza4ps.html" class="text-decoration-none text-success">Pizza 4P’s</a></h3>
-            <p class="card-text">Pizza 4P’s ចូលរួមក្នុងគម្រោង ដែលកែច្នៃកាកសំណល់ទៅជារបស់ប្រើប្រាស់...</p>
+      <!-- Donate Partner Section -->
+      <section>
+        <div class="container my-5">
+          <h3 class="mt-4">ដៃគូរដែលទទួលបរិច្ចាគ</h3>
+          <div class="d-flex partners flex-wrap mt-3">
+            <img
+              src="https://i.pinimg.com/736x/08/b4/9e/08b49e6a40f5396c9959d603c230c063.jpg"
+              alt="Pizza 4P’s"
+            />
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8sEJTjE7r7CmU-GGnppbbB6_lgYajvWXoeQ&s"
+              alt="GoGreen Cambodia"
+            />
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFfIlcbSJ7ecvRKlaeoIaQIGeTI9gsf0L9Mw&s"
+              alt=""
+            />
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR-KnEruj7qCI5ZOjFXKlT6M2_9HnHlR8LJg&s"
+              alt=""
+            />
           </div>
         </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <div class="card">
-          <img src="assets/Kropum/img/Beco---.png" class="card-img" alt="Be Eco"
-            style="height:250px; object-fit:cover;">
-          <div class="card-body">
-            <h3 class="card-title"><a href="be_eco.html" class="text-decoration-none text-success">Be Eco</a></h3>
-            <p class="card-text">Be Eco ចូលរួមក្នុងគម្រោង ដែលកែច្នៃកាកសំណល់ទៅជារបស់ប្រើប្រាស់...</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="checklist">
-          <h3 class="card-title">អ្វីដែលអ្នកអាចបរិច្ចាគ</h3>
-          <ul>
-            <li>ប្លាស្ទិកស្អាត (ដប, កញ្ចប់)</li>
-            <li>សំលៀកបំពាក់ដែលនៅស្ថានភាពល្អ</li>
-            <li>របស់ប្រើប្រាស់ក្នុងផ្ទះ</li>
-            <li>សម្ភារៈអេឡិចត្រូនិចចាស់.....</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Donate Section -->
-  <section id="events" class="container my-5">
-    <div class="container my-5">
-      <h2 class="mb-4">ចែករំលែករបស់ដែលអ្នកប្រើប្រាស់រួច</h2>
-      <div class="row text-center">
-        <div class="col-4">
-          <div class="card p-3 shadow-sm ">
-            <i class="fa-solid fa-tshirt fa-2x text-success mb-3" style="margin-left: 165px;"></i>
-            <h5 class="card-title">សម្លៀកបំពាក់</h5>
-            <p class="card-text">បរិច្ចាគសម្លៀកបំពាក់ដែលអ្នកបានប្រើប្រាស់រួច ដល់មនុស្សដែលកំពុងត្រូវការ</p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card p-3 shadow-sm">
-            <i class="fa-solid fa-couch fa-2x text-success mb-3" style="margin-left: 165px;"></i>
-            <h5 class="card-title">គ្រឿងសង្ហារិម</h5>
-            <p class="card-text">ផ្តល់ជីវិតថ្មីដល់គ្រឿងសង្ហារឹមចាស់របស់អ្នក ដោយបរិច្ចាគវាទៅកាន់កន្លែងដែលត្រូវការ</p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card p-3 shadow-sm">
-            <i class="fa-solid fa-laptop fa-2x text-success mb-3" style="margin-left: 165px;"></i>
-            <h5 class="card-title">ឧបករណ៍អេឡិចត្រូនិច</h5>
-            <p class="card-text">កែច្នៃ និងប្រើឡើងវិញឧបករណ៍អេឡិចត្រូនិក ជំនួសឱ្យការបោះចោល.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Donate Partner Section -->
-  <section>
-    <div class="container my-5">
-      <h3 class="mt-4">ដៃគូរដែលទទួលបរិច្ចាគ</h3>
-      <div class="d-flex partners flex-wrap mt-3">
-        <img src="https://i.pinimg.com/736x/08/b4/9e/08b49e6a40f5396c9959d603c230c063.jpg" alt="Pizza 4P’s">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8sEJTjE7r7CmU-GGnppbbB6_lgYajvWXoeQ&s"
-          alt="GoGreen Cambodia">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFfIlcbSJ7ecvRKlaeoIaQIGeTI9gsf0L9Mw&s" alt="">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR-KnEruj7qCI5ZOjFXKlT6M2_9HnHlR8LJg&s" alt="">
-      </div>
-
-    </div>
-  </section>
+      </section>
 
       <!-- Call to Action -->
       <section class="cta container">
-        <h2 class="text-light">ចូលរួមជាមួយយើងថ្ងៃនេះ!</h2>
-        <p class="text-light">
-          ការបរិច្ចាគតូចៗរបស់អ្នកអាចបង្កើតការផ្លាស់ប្តូរធំសម្រាប់បរិស្ថាន។
-        </p>
-        <a href="reuse.html" class="btn btn-light"
-          >ចែករំលែករបស់ដែលអ្នកប្រើប្រាស់រួច
-          <i class="fa-solid fa-arrow-right"></i
-        ></a>
+        <div class="">
+          <h2 class="text-light">ចូលរួមជាមួយយើងថ្ងៃនេះ!</h2>
+          <p class="text-light">
+            ការបរិច្ចាគតូចៗរបស់អ្នកអាចបង្កើតការផ្លាស់ប្តូរធំសម្រាប់បរិស្ថាន។
+          </p>
+        </div>
       </section>
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/function.js"></script>
   </body>
 </html>
