--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
         style="height: 70px"
       >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
@@ -101,7 +101,9 @@
                   <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
+                  <a class="nav-link nav-hover" href="e-commerce.html"
+                    >ផលិតផលកែច្នៃ</a
+                  >
                 </li>
                 <li class="nav-item fs-5">
                   <a
@@ -319,7 +321,11 @@
     </header>
     <main>
       <section class="hero-banner mt-9 mt-md-0">
-        <img src="assets/image/enviroment.jpg" alt="" class="bg-banner-img position-relative">
+        <img
+          src="assets/image/enviroment.jpg"
+          alt=""
+          class="bg-banner-img position-relative"
+        />
         <div class="container banner">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-md-6">
@@ -341,14 +347,97 @@
               </a>
             </div>
             <div class="col-12 col-md-6">
-              <div
-                class="banner-img position-relative d-none d-md-block"
-              >
+              <div class="banner-img position-relative d-none d-md-block">
                 <img
                   src="assets/image/banner-1.png"
                   alt=""
                   class="banner-img"
                 />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="type-recycle py-5">
+        <div class="container">
+          <h2 class="scale-up-ver-center text-center pt-4">
+            ប្រភេទនៃការកែច្នៃ
+          </h2>
+          <div class="row g-5 mt-1">
+            <!-- 1 -->
+            <div class="col-6 col-md-3">
+              <div class="content text-center">
+                <div
+                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  style="width: 60px; height: 60px"
+                >
+                  <img
+                    src="assets/image/recycle type/barrel.png"
+                    alt=""
+                    class=""
+                  />
+                </div>
+                <h4>ការកែច្នៃដោយគីមី</h4>
+                <p>
+                  ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
+                  ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី
+                </p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="content text-center">
+                <div
+                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  style="width: 60px; height: 60px"
+                >
+                  <img
+                    src="assets/image/recycle type/machin.png"
+                    alt=""
+                    class=""
+                  />
+                </div>
+                <h4>ការកែច្នៃមេកានិច</h4>
+                <p>
+                  ការបំបែកសំណល់ (ដូចជា ប្លាស្ទិក ដែក កញ្ចក់) ទៅជាវត្ថុធាតុដើម ហើយប្រើឡើងវិញដើម្បីផលិតផលថ្មី។
+                </p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="content text-center">
+                <div
+                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  style="width: 60px; height: 60px"
+                >
+                  <img
+                    src="assets/image/recycle type/barrel.png"
+                    alt=""
+                    class=""
+                  />
+                </div>
+                <h4>ការកែច្នៃដោយគីមី</h4>
+                <p>
+                  ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
+                  ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី
+                </p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3">
+              <div class="content text-center">
+                <div
+                  class="type-img rounded-circle bg-success d-flex justify-content-center align-items-center mb-3 m-auto"
+                  style="width: 60px; height: 60px"
+                >
+                  <img
+                    src="assets/image/recycle type/barrel.png"
+                    alt=""
+                    class=""
+                  />
+                </div>
+                <h4>ការកែច្នៃដោយគីមី</h4>
+                <p>
+                  ប្រើដំណើរការគីមី ដើម្បីបម្លែងសំណល់
+                  ឲ្យត្រឡប់ទៅជាគ្រឿងផ្សំគីមីដើមសារជាថ្មី
+                </p>
               </div>
             </div>
           </div>
@@ -363,24 +452,34 @@
             <div class="text container py-3">
               <div class="row align-items-center">
                 <div class="col-12 col-md-8">
-                <h3>១. ការការពារបរិស្ថាន</h3>
-                <p>
-                  <span class="me-1">-</span> ការកែច្នៃជួយកាត់បន្ថយសំណល់ដែលត្រូវចាក់ចូលក្នុងកន្លែងចាក់សំរាម និងកន្លែងចាក់កាកសំណល់ផ្សេងៗ។
-                </p>
-                <p>
-                  <span class="me-1">-</span> បញ្ហាសំណល់ច្រើនធ្វើឲ្យមានការបំពុលដី ទឹក និងខ្យល់។
-                  ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
-                </p>
-                <p>
-                  <span class="me-1">-</span> ការកែច្នៃក៏អាចអភិរក្សធនធានធម្មជាតិដូចជាទឹក ដើមឈើ និងរ៉ែ
-                  ដែលគេត្រូវប្រើក្នុងការផលិតថ្មី។
-                </p>
-              </div>
-              <div class="col-12 col-md-4">
-                <img src="assets/image/Environmental Protection.jpg" alt="" class="img-fluid rounded-4" data-aos="flip-left"
-                data-aos-duration="1000"
-                data-aos-delay="200" height="300px">
-              </div>
+                  <h3>១. ការការពារបរិស្ថាន</h3>
+                  <p>
+                    <span class="me-1">-</span>
+                    ការកែច្នៃជួយកាត់បន្ថយសំណល់ដែលត្រូវចាក់ចូលក្នុងកន្លែងចាក់សំរាម
+                    និងកន្លែងចាក់កាកសំណល់ផ្សេងៗ។
+                  </p>
+                  <p>
+                    <span class="me-1">-</span>
+                    បញ្ហាសំណល់ច្រើនធ្វើឲ្យមានការបំពុលដី ទឹក និងខ្យល់។
+                    ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
+                  </p>
+                  <p>
+                    <span class="me-1">-</span>
+                    ការកែច្នៃក៏អាចអភិរក្សធនធានធម្មជាតិដូចជាទឹក ដើមឈើ និងរ៉ែ
+                    ដែលគេត្រូវប្រើក្នុងការផលិតថ្មី។
+                  </p>
+                </div>
+                <div class="col-12 col-md-4">
+                  <img
+                    src="assets/image/Environmental Protection.jpg"
+                    alt=""
+                    class="img-fluid rounded-4"
+                    data-aos="flip-left"
+                    data-aos-duration="1000"
+                    data-aos-delay="200"
+                    height="300px"
+                  />
+                </div>
               </div>
             </div>
           </div>
@@ -388,19 +487,28 @@
             <div class="text container py-3">
               <div class="row align-items-center">
                 <div class="col-12 col-md-8">
-                <h3>២. ការសន្សំថាមពល</h3>
-                <p>
-                  <span class="me-1">-</span> ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម រហូតដល់ការផលិត និងដឹកជញ្ជូន។
-                </p>
-                <p>
-                  <span class="me-1">-</span> ការកែច្នៃប្រើថាមពលតិចជាង ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
-                </p>
-              </div>
-              <div class="col-12 col-md-4">
-                <img src="assets/image/energy save.jpg" alt="" class="img-fluid" data-aos="flip-left"
-                data-aos-duration="1000"
-                data-aos-delay="200" style="height: 300px;">
-              </div>
+                  <h3>២. ការសន្សំថាមពល</h3>
+                  <p>
+                    <span class="me-1">-</span>
+                    ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម
+                    រហូតដល់ការផលិត និងដឹកជញ្ជូន។
+                  </p>
+                  <p>
+                    <span class="me-1">-</span> ការកែច្នៃប្រើថាមពលតិចជាង
+                    ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
+                  </p>
+                </div>
+                <div class="col-12 col-md-4">
+                  <img
+                    src="assets/image/energy save.jpg"
+                    alt=""
+                    class="img-fluid"
+                    data-aos="flip-left"
+                    data-aos-duration="1000"
+                    data-aos-delay="200"
+                    style="height: 300px"
+                  />
+                </div>
               </div>
             </div>
           </div>
@@ -408,19 +516,30 @@
             <div class="text container py-3">
               <div class="row align-items-center">
                 <div class="col-12 col-md-8">
-                <h3>៣. ឥទ្ធិពលអាកាសធាតុ</h3>
-                <p>
-                  <span class="me-1">-</span> ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄) ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
-                </p>
-                <p>
-                  <span class="me-1">-</span> ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។ ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
-                </p>
-              </div>
-              <div class="col-12 col-md-4">
-                <img src="assets/image/climate.jpg" alt="" class="img-fluid rounded-4" data-aos="flip-left"
-                data-aos-duration="1000"
-                data-aos-delay="200" style="height: 300px;">
-              </div>
+                  <h3>៣. ឥទ្ធិពលអាកាសធាតុ</h3>
+                  <p>
+                    <span class="me-1">-</span>
+                    ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄)
+                    ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
+                  </p>
+                  <p>
+                    <span class="me-1">-</span>
+                    ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន
+                    (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។
+                    ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
+                  </p>
+                </div>
+                <div class="col-12 col-md-4">
+                  <img
+                    src="assets/image/climate.jpg"
+                    alt=""
+                    class="img-fluid rounded-4"
+                    data-aos="flip-left"
+                    data-aos-duration="1000"
+                    data-aos-delay="200"
+                    style="height: 300px"
+                  />
+                </div>
               </div>
             </div>
           </div>
