--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </div>
       </nav>
     </header>
-    <main >
+    <main>
       <section class="hero-banner mt-9 mt-md-0">
         <img
           src="assets/image/enviroment.jpg"
@@ -377,7 +377,7 @@
           </div>
         </div>
       </section>
-      <section class="type-recycle py-5">
+      <section class="type-recycle pt-5 pb-8">
         <div class="container">
           <h2 class="scale-up-ver-center text-center pt-4">
             ប្រភេទនៃការកែច្នៃ
@@ -490,55 +490,20 @@
           </div>
         </div>
       </section>
-      <secction class="collaboration">
+      <section class="collaboration">
         <div class="slider bg-success">
-          <div class="slide-track">
-            <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="-1-img" />
+            <div class="list">
+              <div class="slide-item" style="--position: 1"><img src="assets/image/circleclothes.png" alt=""></div>
+              <div class="slide-item" style="--position: 2"><img src="assets/image/pizza4p.png" alt=""></div>
+              <div class="slide-item" style="--position: 3"><img src="assets/image/trashisnice.png" alt=""></div>
+              <div class="slide-item" style="--position: 4"><img src="assets/image/circleclothes.png" alt=""></div>
+              <div class="slide-item" style="--position: 5"><img src="assets/image/pizza4p.png" alt=""></div>
+              <div class="slide-item" style="--position: 6"><img src="assets/image/trashisnice.png" alt=""></div>
             </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/circleclothes.jpg"
-                alt=""
-                class="slide-img"
-              />
-            </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/trashisnice.png"
-                alt=""
-                class="slide-img"
-              />
-            </div>
-            <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img" />
-            </div>
-            <!-- doublicate slide -->
-            <div class="slide-1">
-              <img src="assets/image/pizza4p.png" alt="" class="slide-img" />
-            </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/circleclothes.jpg"
-                alt=""
-                class="slide-img"
-              />
-            </div>
-            <div class="slide-1">
-              <img
-                src="assets/image/trashisnice.png"
-                alt=""
-                class="slide-img"
-              />
-            </div>
-            <div class="slide-1">
-              <img src="assets/image/greencam.png" alt="" class="slide-img" />
-            </div>
-          </div>
         </div>
-      </secction>
+    </section>
       <section class="benefit">
-        <div class="text-center pt-4 bg-body-secondary">
+        <div class="text-center pt-8 bg-body-secondary">
           <h2 class="scale-up-ver-center m-0">អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
         </div>
         <div class="content">
@@ -648,6 +613,7 @@
       </section>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/function.js"></script>
   </body>
