--- a/e-commerce.html
+++ b/e-commerce.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/makara/style.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme.css">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- css -->
+    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    
   </head>
   <body>
     <header>
@@ -70,7 +74,7 @@
                 </form>
                 <li class="nav-item">
                   <a
-                    class="nav-link fs-5 nav-hover"
+                    class="nav-link active fs-5 nav-hover"
                     aria-current="page"
                     href="index.html"
                     >ទំព័រដើម</a
@@ -91,7 +95,7 @@
                       <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
+                      <a class="dropdown-item" href="#">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -119,7 +123,7 @@
                   </ul>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link active nav-hover" href="e-commerce.html"
+                  <a class="nav-link nav-hover" href="e-commerce.html"
                     >ផលិតផលកែច្នៃ</a
                   >
                 </li>
@@ -136,7 +140,7 @@
           </div>
           <div class="user-profile d-flex align-items-center">
             <!-- Search Button -->
-            <form class="d-flex d-none d-md-block" role="search">
+            <form class="d-flex d-none d-md-block mx-3" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
@@ -338,8 +342,8 @@
       </nav>
     </header>
     <main>
-      <section style="margin-top: 100px; ">
-        <div class="container ">
+      <section class="mt-12">
+        <div class="container">
           <div class="row g-4">
             <!-- Left Title -->
             <div class="col-sm-12 col-md-6">
