--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="assets/chhorng/style.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -137,7 +138,7 @@
           </div>
           <div class="user-profile d-flex align-items-center">
             <!-- Search Button -->
-            <form class="d-flex d-none d-md-block mx-3" role="search">
+            <form class="d-flex d-none d-md-block me-3" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
