--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         </div>
       </section>
     </main>
-    <footer class="bg-white pt-8 border-top">
+    <footer class="bg-footer pt-8 border-top">
       <div class="container">
         <div class="row g-4">
           <div class="col-md-6 col-lg-4">
